--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^1.10.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vite-plugin-pwa": "^0.17.0"
+		"vite-plugin-pwa": "^0.17.0",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
+		"@dicebear/collection": "^7.0.1",
+		"@dicebear/core": "^7.0.1",
 		"pocketbase": "^0.19.0"
 	}
 }
