--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,1 +1,26 @@
-{"theme_color":"#ffffff","background_color":"#ffffff","icons":[{"purpose":"maskable","sizes":"512x512","src":"icon512_maskable.png","type":"image/png"},{"purpose":"any","sizes":"512x512","src":"icon512_rounded.png","type":"image/png"}],"orientation":"portrait","display":"standalone","dir":"left","lang":"en-CA","name":"DebtSnap","short_name":"DebtSnap","start_url":"https://svelte-debt.pages.dev/dashboard","description":"Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends."}
+{
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
+    "icons": [
+      {
+        "purpose": "maskable",
+        "sizes": "512x512",
+        "src": "icon512_maskable.png",
+        "type": "image/png"
+      },
+      {
+        "purpose": "any",
+        "sizes": "512x512",
+        "src": "icon512_rounded.png",
+        "type": "image/png"
+      }
+    ],
+    "orientation": "portrait",
+    "display": "standalone",
+    "dir": "left",
+    "lang": "en-CA",
+    "name": "DebtSnap",
+    "short_name": "DebtSnap",
+    "start_url": "https://svelte-debt.pages.dev/dashboard",
+    "description": "Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends."
+  }
