--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dayjs": "^1.11.10",
 		"pocketbase": "^0.19.0",
 		"svelte-french-toast": "^1.2.0"
 	}
