--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,6 +13,12 @@
         "sizes": "512x512",
         "src": "icon512_rounded.png",
         "type": "image/png"
+      },
+      {
+        "purpose": "any",
+        "sizes": "144x144",
+        "src": "144x144icon.png",
+        "type": "image/png"
       }
     ],
     "orientation": "portrait",
