--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"@types/uniqid": "^5.3.4",
 		"@types/web-push": "^3.6.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -36,6 +37,7 @@
 		"dayjs": "^1.11.10",
 		"pocketbase": "^0.19.0",
 		"svelte-french-toast": "^1.2.0",
+		"uniqid": "^5.4.0",
 		"web-push": "^3.6.6"
 	}
 }
