--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 	"dependencies": {
 		"dayjs": "^1.11.10",
 		"pocketbase": "^0.19.0",
+		"short-unique-id": "^5.0.3",
 		"svelte-french-toast": "^1.2.0",
-		"uniqid": "^5.4.0",
 		"web-push": "^3.6.6"
 	},
 	"browser": {
