--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,12 @@
-# flyctl launch added from .gitignore
-**\.DS_Store
-**\node_modules
-build
+.git
+node_modules
+.eslint*
+.prettier*
+.git*
+.vscode
+README.md
+Dockerfile*
+docker-compose.yml
+public
 .svelte-kit
-package
-**\.env
-**\.env.*
-!**\.env.example
-**\vite.config.js.timestamp-*
-**\vite.config.ts.timestamp-*
-fly.toml
+build
